<?xml version="1.0" encoding="utf-8"?>
<!-- Dialog for setting a WTSAPP alias (#SET command) -->
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="10dp">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/wtsapp_alias"
android:textStyle="bold" />

<EditText android:id="@+id/wtsapp_alias_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/wtsapp_alias_hint"
android:singleLine="true"
android:inputType="text" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/wtsapp_phone"
android:textStyle="bold" />

<EditText android:id="@+id/wtsapp_phone_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/wtsapp_phone_hint"
android:singleLine="true"
android:inputType="phone" />

</LinearLayout>
