<?xml version="1.0" encoding="utf-8"?>
<!-- Dialog for email command: email <addr> <msg> -->
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="10dp">

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/mailmy_email_addr"
android:textStyle="bold" />

<EditText android:id="@+id/mailmy_email_addr_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/mailmy_email_addr_hint"
android:singleLine="true"
android:inputType="textEmailAddress" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/mailmy_email_msg"
android:textStyle="bold" />

<EditText android:id="@+id/mailmy_email_msg_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/mailmy_email_msg_hint"
android:singleLine="true"
android:maxLength="67"
android:inputType="textShortMessage|textCapSentences" />

</LinearLayout>
